--- a/index.html
+++ b/index.html
@@ -42,6 +42,49 @@
 	</header>
 
 
+		<!--CAROUSEL OF IMAGES-->
+		<div class="container-carousel">
+		  <br>
+		  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+		    <!-- Indicators -->
+		    <ol class="carousel-indicators">
+		      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+		      <li data-target="#myCarousel" data-slide-to="1"></li>
+		      <li data-target="#myCarousel" data-slide-to="2"></li>
+		      <li data-target="#myCarousel" data-slide-to="3"></li>
+		    </ol>
+
+		    <!-- Wrapper for slides -->
+		    <div class="carousel-inner" role="listbox">
+		      <div class="item active">
+		        <img src="img/Stargazing.png" alt="stargazing" width="970" height="280">
+		      </div>
+
+		      <div class="item">
+		        <img src="img/shootingstar.png" alt="shooting star" width="970" height="280">
+		      </div>
+		    
+		      <div class="item">
+		        <img src="img/sun.png" alt="sun" width="970" height="280">
+		      </div>
+
+		      <div class="item">
+		        <img src="img/eclipse.png" alt="eclipse" width="970" height="280">
+		      </div>
+		    </div>
+
+		    <!-- Left and right controls -->
+		    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		      <span class="sr-only">Previous</span>
+		    </a>
+		    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		      <span class="sr-only">Next</span>
+		    </a>
+		  </div>
+		</div>
+
 		
 
 
@@ -112,6 +155,6 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 		<script src="app.js" type="text/javascript" charset="utf-8"></script>
 	
-	</div>
+		</div>
 </body>
 </html>
