--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 			<div class="container-fluid">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+						<span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span>
+						<!-- <span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<span class="icon-bar"></span> -->
 					</button>							
 					<a id="title" class="navbar-brand col-xs-12" herf="#">Astronomy for Kids</a>								
 				</div>	
