--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>							
-					<a id="title" class="navbar-brand col-xs-12" herf="#">Astronomy for Kids</a>								
+					<a id="title" class="navbar-brand">Astronomy for Kids</a>								
 				</div>	
 				
 				<div class="collapse navbar-collapse" id="myNavbar">
 						<!-- SELF NOTE: HAD TO DELETE  class="hidden"-->
 					<ul class="nav navbar-nav">
-						<li><a href="#one">Stars</a></li>
+						<li id="starsArticle"><a href="#one">Stars</a></li>
 						<li><a href="#two">Sun</a></li>
 						<li><a href="#three">Eclipse of the Sun</a></li>
 					</ul>
@@ -47,6 +47,7 @@
 
 
 		<div class="container-fluid">
+		
 		<section class="articles">
 			<div class="row">
 				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
