added @media for md screen

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
 	<header id="top">
+		<!--NAVBAR-->
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -27,19 +28,15 @@
 					</button>							
 					<a id="title" class="navbar-brand">Astronomy for Kids</a>								
 				</div>	
-				
 				<div class="collapse navbar-collapse" id="myNavbar">
-						<!-- SELF NOTE: HAD TO DELETE  class="hidden"-->
-					<ul class="nav navbar-nav">
+					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#one" id="starsArticle">Stars</a></li>
 						<li><a href="#two" id="sunArticle">Sun</a></li>
 						<li><a href="#three" id="eclipseArticle">Eclipse of the Sun</a></li>
 					</ul>
-
-
-				</div>
+				</div> 
 			</div>
-		</nav>
+		</nav> <!--NAVBAR END-->
 	</header>
 
 
@@ -94,15 +91,13 @@
 			<img class="hide" id="eclipseImg" src="img/eclipse.png" alt="eclipse" width="970" height="280">
 		</div>
 
-
-
 		<div class="container-fluid">
 		
 		<section class="articles">
 
 			<div class="row">
 
-				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<article id="one" class="hide">
 
 						<header>
@@ -121,7 +116,7 @@
 				</div>
 
 
-				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<article id="two" class="hide">
 					<img src="img/sun.png" alt="sun" height="150" width="300">
 						<header>
@@ -138,7 +133,7 @@
 					</article>
 				</div>
 
-				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
 					<article id="three" class="hide">
 						<img src="img/eclipse.png" alt="sun" height="150" width="300">
 						<header>
