fixed margin on articles

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 	<header id="top">
 		<!--NAVBAR-->
+
 		<nav class="navbar navbar-inverse">
 			<div class="container-fluid">
 				<div class="navbar-header">
@@ -101,7 +102,7 @@
 					<article id="one" class="hide">
 
 						<header>
-						<img src="img/shootingstar.png" alt="sun" height="150" width="300">
+						<img src="img/shootingstar.png" alt="sun" height="150" width="300" id="shootingStar">
 							<h2>Stars</h2>
 						</header>
 						<body>
@@ -152,10 +153,10 @@
 
 			</div>
 		</section>
-
+<!-- 
 		<footer id="bottom">
 		
-		</footer>
+		</footer> -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 		<script src="app.js" type="text/javascript" charset="utf-8"></script>
