--- a/index.html
+++ b/index.html
@@ -93,14 +93,10 @@
 		</div>
 
 		<div class="container-fluid">
-		
 		<section class="articles">
-
 			<div class="row">
-
-				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-4">
 					<article id="one" class="hide">
-
 						<header>
 						<img src="img/shootingstar.png" alt="sun" height="150" width="300" id="shootingStar">
 							<h2>Stars</h2>
@@ -111,19 +107,15 @@
 						</body>
 						<footer>
 							<a href="#top">Top</a>
-						</footer>
-						
+						</footer>	
 					</article>
 				</div>
-
-
-				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-4">
 					<article id="two" class="hide">
 					<img src="img/sun.png" alt="sun" height="150" width="300">
 						<header>
 							<h2>Sun</h2>
-						</header>
-						
+						</header>	
 						<body>
 							<p>The Sun is a star, just like billions of other stars in the universe. Our Sun probably formed a little more than four and a half billion years ago, just a little bit before the planets formed around it. It's not one of the older stars in the Universe. Probably some of the earliest stars went supernova, and then new stars formed out of those nebulae, and then the new stars went supernova, and the Sun formed out of one of these new nebulae. So you could say that the Sun is like the grandchild of the first stars.</p>
 							<p>Like other stars, the Sun is mostly made of hydrogen atoms. All stars start out making energy by changing hydrogen atoms into helium atoms. At the surface, the Sun is almost 10,000 degrees Fahrenheit (more than 5000 degrees Celsius), but it is much hotter in the middle of the Sun, about 25 million degrees Fahrenheit (14 million degrees Celsius). The Sun is one of the brighter stars in the Universe, because many other stars are older and have already turned into red dwarfs....</p>
@@ -134,7 +126,7 @@
 					</article>
 				</div>
 
-				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+				<div class="col-xs-12 col-sm-12 col-md-4">
 					<article id="three" class="hide">
 						<img src="img/eclipse.png" alt="sun" height="150" width="300">
 						<header>
@@ -149,8 +141,6 @@
 						</footer>
 					</article>
 				</div>
-
-
 			</div>
 		</section>
 <!-- 
@@ -159,8 +149,7 @@
 		</footer> -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-		<script src="app.js" type="text/javascript" charset="utf-8"></script>
-	
+		<script src="app.js" type="text/javascript" charset="utf-8"></script>	
 		</div>
 </body>
 </html>
